[gd_scene load_steps=30 format=3 uid="uid://dii7431l7ulys"]

[ext_resource type="Script" uid="uid://bxfpd6lllbosy" path="res://objects/vehicles/player_controls.gd" id="1_lgipv"]
[ext_resource type="Script" uid="uid://cu5pn655aha13" path="res://objects/common/fp_camera_holder.gd" id="1_w214r"]
[ext_resource type="Script" uid="uid://db5fo0njlni2v" path="res://objects/vehicles/horizon.gd" id="2_vluwj"]
[ext_resource type="Texture2D" uid="uid://buyab1s5wwd8b" path="res://textures/nose_sprite.png" id="3_lgipv"]
[ext_resource type="Texture2D" uid="uid://c8pblqefl4ywh" path="res://textures/heading_sprite.png" id="4_fcjbv"]
[ext_resource type="AudioStream" uid="uid://dv25ginp3metu" path="res://sounds/hit.ogg" id="4_xxp4i"]
[ext_resource type="Script" uid="uid://cnwxl0c06eycl" path="res://objects/common/heat_seeker.gd" id="5_pf0s1"]
[ext_resource type="Script" uid="uid://digjrqq0dauj1" path="res://objects/missile/missile_display.gd" id="5_xxp4i"]
[ext_resource type="AudioStream" uid="uid://dybskywf11sk0" path="res://sounds/Beam.ogg" id="6_2acr0"]
[ext_resource type="Texture2D" uid="uid://dx33u8vdllssr" path="res://textures/marker_v.png" id="6_sbsnl"]
[ext_resource type="AudioStream" uid="uid://domw4yubo2r86" path="res://sounds/beep.ogg" id="7_rw3n3"]
[ext_resource type="Script" uid="uid://bk4syu2gcjm2n" path="res://objects/common/target_tracker.gd" id="9_lgipv"]
[ext_resource type="Shader" uid="uid://b30jy27kjrgma" path="res://objects/vehicles/g_color_rect.gdshader" id="9_u6qbw"]
[ext_resource type="PackedScene" uid="uid://bnqlnpxb47hb" path="res://objects/common/target_marker.tscn" id="10_fcjbv"]
[ext_resource type="AudioStream" uid="uid://dxs3upvxt0kig" path="res://sounds/alarm.ogg" id="11_sbsnl"]
[ext_resource type="Script" uid="uid://g4cuyhv8kiex" path="res://objects/common/heatseeker_target_tracker.gd" id="11_xxp4i"]
[ext_resource type="Script" uid="uid://ca3q1n33gqkgg" path="res://objects/missile/player_missile_launcher.gd" id="12_f157b"]
[ext_resource type="PackedScene" uid="uid://binjvtutugvoy" path="res://objects/missile/missile_heatseeker.tscn" id="13_qivai"]
[ext_resource type="Script" uid="uid://cfr6sfdj27xqg" path="res://objects/common/radar.gd" id="14_3o10w"]
[ext_resource type="Script" uid="uid://b28v7lt37mwvw" path="res://objects/common/radar_beam.gd" id="14_qivai"]
[ext_resource type="Script" uid="uid://squqqv8qatax" path="res://objects/common/radar_echo_tracker.gd" id="19_65j3t"]
[ext_resource type="PackedScene" uid="uid://qd8phs5buioq" path="res://objects/common/radar_echo_marker.tscn" id="20_3o10w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_us0ds"]
shader = ExtResource("9_u6qbw")
shader_parameter/radius = 0.5

[sub_resource type="ViewportTexture" id="ViewportTexture_0qbkc"]
viewport_path = NodePath("Display/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nhwor"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_0qbkc")

[sub_resource type="QuadMesh" id="QuadMesh_0qbkc"]

[sub_resource type="ViewportTexture" id="ViewportTexture_nhwor"]
viewport_path = NodePath("Horizon/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1m05p"]
resource_local_to_scene = true
transparency = 1
cull_mode = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_nhwor")

[sub_resource type="SphereMesh" id="SphereMesh_0qbkc"]
radius = 2.0
height = 4.0

[node name="PlayerRig" type="Node3D"]
script = ExtResource("1_lgipv")

[node name="FPCameraHolder" type="Node3D" parent="." node_paths=PackedStringArray("fps_label")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.331581)
script = ExtResource("1_w214r")
fps_label = NodePath("Camera3D/CanvasLayer1/HBoxContainer/VBoxContainer/FpsLabel")
zoom_as_toggle = true

[node name="Camera3D" type="Camera3D" parent="FPCameraHolder"]
unique_name_in_owner = true
fov = 85.0
near = 0.01
far = 30000.0

[node name="HeatSeekerTargetTracker" type="Node3D" parent="FPCameraHolder/Camera3D" node_paths=PackedStringArray("seeker", "seeker_bg", "locking_sound", "locked_sound")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
script = ExtResource("11_xxp4i")
seeker = NodePath("HeatSeeker")
seeker_bg = NodePath("HeatSeekerBg")
marker_scene = ExtResource("10_fcjbv")
play_sounds = true
locking_sound = NodePath("LockingSound")
locked_sound = NodePath("LockedSound")
metadata/_custom_type_script = "uid://g4cuyhv8kiex"

[node name="HeatSeeker" type="Node3D" parent="FPCameraHolder/Camera3D/HeatSeekerTargetTracker"]
script = ExtResource("5_pf0s1")
metadata/_custom_type_script = "uid://cnwxl0c06eycl"

[node name="LockingSound" type="AudioStreamPlayer3D" parent="FPCameraHolder/Camera3D/HeatSeekerTargetTracker"]
stream = ExtResource("6_2acr0")
volume_db = -30.0

[node name="LockedSound" type="AudioStreamPlayer3D" parent="FPCameraHolder/Camera3D/HeatSeekerTargetTracker"]
stream = ExtResource("7_rw3n3")
volume_db = -30.0
pitch_scale = 0.6

[node name="HeatSeekerBg" type="Node3D" parent="FPCameraHolder/Camera3D/HeatSeekerTargetTracker"]
script = ExtResource("5_pf0s1")
tracking_fov_deg = 180.0
metadata/_custom_type_script = "uid://cnwxl0c06eycl"

[node name="MissileDisplay" type="Node3D" parent="FPCameraHolder/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
script = ExtResource("5_xxp4i")
metadata/_custom_type_script = "uid://digjrqq0dauj1"

[node name="CanvasLayer1" type="CanvasLayer" parent="FPCameraHolder/Camera3D"]

[node name="DamageColorRect" type="ColorRect" parent="FPCameraHolder/Camera3D/CanvasLayer1"]
material = SubResource("ShaderMaterial_us0ds")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="FPCameraHolder/Camera3D/CanvasLayer1"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="FPCameraHolder/Camera3D/CanvasLayer1/HBoxContainer"]
layout_mode = 2

[node name="filler" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer1/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6

[node name="HpLabel" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer1/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.988235, 0, 1)
text = "111"

[node name="filler" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FPCameraHolder/Camera3D/CanvasLayer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FpsLabel" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer1/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.988235, 0, 1)
text = "111"

[node name="filler" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer1/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="LegendLabel" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer1/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.988235, 0, 1)
theme_override_font_sizes/font_size = 10
text = "W/S: Pitch
A/D: Roll
Q/E: Yaw
Shift/Space: Throttle
C/Scroll: Flares
G: AoA Limiter
M2: Missile
Mouse: Freelook
Z: Zoom
F: Center Camera"

[node name="CanvasLayer2" type="CanvasLayer" parent="FPCameraHolder/Camera3D"]

[node name="TextureRect" type="TextureRect" parent="FPCameraHolder/Camera3D/CanvasLayer2"]
modulate = Color(0.486275, 0.988235, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_sbsnl")

[node name="HBoxContainer" type="HBoxContainer" parent="FPCameraHolder/Camera3D/CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="filler1" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainerT" type="VBoxContainer" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer"]
layout_mode = 2

[node name="filler1" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerT"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Label" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerT"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.988235, 0, 1)
text = "T"

[node name="ThrottleProgressBar" type="ProgressBar" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerT"]
layout_mode = 2
size_flags_vertical = 3
step = 1.0
fill_mode = 3
show_percentage = false

[node name="filler2" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerT"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="filler2" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="filler3" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="filler4" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainerV" type="VBoxContainer" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer"]
layout_mode = 2

[node name="filler1" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerV"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerV"]
layout_mode = 2

[node name="VLLabel" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerV/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.988235, 0, 1)
text = "V"

[node name="VALabel" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerV/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.988235, 0, 1)
text = "A"

[node name="HBoxContainer1" type="HBoxContainer" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerV"]
layout_mode = 2
size_flags_vertical = 3

[node name="VLProgressBar" type="ProgressBar" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerV/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
step = 1.0
fill_mode = 3
show_percentage = false

[node name="VAProgressBar" type="ProgressBar" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerV/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 36.0
step = 1.0
fill_mode = 3
show_percentage = false

[node name="filler2" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer/VBoxContainerV"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="filler5" type="Label" parent="FPCameraHolder/Camera3D/CanvasLayer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioListener3D" type="AudioListener3D" parent="FPCameraHolder/Camera3D"]
current = true

[node name="ProximityAlarmSound" type="AudioStreamPlayer3D" parent="FPCameraHolder/Camera3D"]
stream = ExtResource("4_xxp4i")

[node name="PlayerMissileLauncher" type="Node3D" parent="FPCameraHolder/Camera3D" node_paths=PackedStringArray("camera", "missile_cam", "tracker")]
script = ExtResource("12_f157b")
camera = NodePath("..")
missile_cam = NodePath("../../../MissileCamera")
tracker = NodePath("../HeatSeekerTargetTracker")
missile_scene = ExtResource("13_qivai")
metadata/_custom_type_script = "uid://ca3q1n33gqkgg"

[node name="Radar" type="Node3D" parent="." node_paths=PackedStringArray("beam")]
script = ExtResource("14_3o10w")
beam = NodePath("RadarBeam")
metadata/_custom_type_script = "uid://cfr6sfdj27xqg"

[node name="RadarEchoTracker" type="Node3D" parent="Radar" node_paths=PackedStringArray("radar")]
script = ExtResource("19_65j3t")
radar = NodePath("..")
marker_scene = ExtResource("20_3o10w")
min_draw_distance = 320.0
metadata/_custom_type_script = "uid://squqqv8qatax"

[node name="RadarBeam" type="Node3D" parent="Radar"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -2)
script = ExtResource("14_qivai")
metadata/_custom_type_script = "uid://b28v7lt37mwvw"

[node name="Display" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.2)
material_override = SubResource("StandardMaterial3D_nhwor")
mesh = SubResource("QuadMesh_0qbkc")
skeleton = NodePath("../..")

[node name="SubViewport" type="SubViewport" parent="Display"]
transparent_bg = true

[node name="HBoxContainer" type="HBoxContainer" parent="Display/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Display/SubViewport/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="SpeedLabel" type="Label" parent="Display/SubViewport/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.988235, 0, 1)
theme_override_font_sizes/font_size = 16
text = "111"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ThrottleLabel" type="Label" parent="Display/SubViewport/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.988235, 0, 1)
theme_override_font_sizes/font_size = 16
text = "333"

[node name="Label" type="Label" parent="Display/SubViewport/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Display/SubViewport/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="AoALabel" type="Label" parent="Display/SubViewport/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.988235, 0, 1)
theme_override_font_sizes/font_size = 16
text = "222"

[node name="GForceLabel" type="Label" parent="Display/SubViewport/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.988235, 0, 1)
text = "444"

[node name="LimiterLabel" type="Label" parent="Display/SubViewport/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Horizon" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_1m05p")
mesh = SubResource("SphereMesh_0qbkc")
skeleton = NodePath("../..")

[node name="SubViewport" type="SubViewport" parent="Horizon"]
transparent_bg = true
size = Vector2i(1024, 1024)

[node name="Control" type="Control" parent="Horizon/SubViewport"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -512.0
offset_right = 512.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_vluwj")

[node name="NoseSprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
modulate = Color(0.486275, 0.988235, 0, 1)
pixel_size = 0.0032
billboard = 1
no_depth_test = true
fixed_size = true
texture_filter = 0
texture = ExtResource("3_lgipv")

[node name="HeadingSprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
modulate = Color(0.486275, 0.988235, 0, 1)
pixel_size = 0.0032
billboard = 1
no_depth_test = true
fixed_size = true
texture_filter = 0
texture = ExtResource("4_fcjbv")

[node name="TargetTracker" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("9_lgipv")
camera = NodePath("../FPCameraHolder/Camera3D")
marker_scene = ExtResource("10_fcjbv")
target_group = "n"
fov_deg = 60.0
metadata/_custom_type_script = "uid://bk4syu2gcjm2n"

[node name="MissileCamera" type="Camera3D" parent="."]
far = 30000.0

[node name="AoALimiterWarning" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_sbsnl")
volume_db = -2.0
